--- a/notebooks/01_data_validation.ipynb
+++ b/notebooks/01_data_validation.ipynb
@@ -51,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 126 rows from F:\\antigravity\\klypto assignment\\nifty-quant-research\\data/raw/nifty_spot_5min.csv\n"
+      "Loaded 126 rows from F:\\antigravity\\klypto assignment\\data/raw/nifty_spot_5min.csv\n"
      ]
     }
    ],
@@ -68,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 5040 rows from F:\\antigravity\\klypto assignment\\nifty-quant-research\\data/raw/nifty_futures_raw.csv\n"
+      "Loaded 5040 rows from F:\\antigravity\\klypto assignment\\data/raw/nifty_futures_raw.csv\n"
      ]
     }
    ],
@@ -85,7 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 269426 rows from F:\\antigravity\\klypto assignment\\nifty-quant-research\\data/raw/nifty_options_raw.csv\n"
+      "Loaded 269426 rows from F:\\antigravity\\klypto assignment\\data/raw/nifty_options_raw.csv\n"
      ]
     }
    ],
