--- a/notebooks/03_data_merging.ipynb
+++ b/notebooks/03_data_merging.ipynb
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 126 rows from F:\\antigravity\\klypto assignment\\nifty-quant-research\\data/processed/nifty_spot_clean.csv\n"
+      "Loaded 126 rows from F:\\antigravity\\klypto assignment\\data/processed/nifty_spot_clean.csv\n"
      ]
     }
    ],
@@ -77,7 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 8 rows from F:\\antigravity\\klypto assignment\\nifty-quant-research\\data/processed/nifty_futures_clean.csv\n"
+      "Loaded 8 rows from F:\\antigravity\\klypto assignment\\data/processed/nifty_futures_clean.csv\n"
      ]
     }
    ],
@@ -94,7 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 11972 rows from F:\\antigravity\\klypto assignment\\nifty-quant-research\\data/processed/nifty_options_clean.csv\n"
+      "Loaded 11972 rows from F:\\antigravity\\klypto assignment\\data/processed/nifty_options_clean.csv\n"
      ]
     }
    ],
@@ -183,7 +183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved file: F:\\antigravity\\klypto assignment\\nifty-quant-research\\data/processed/nifty_merged_5min.csv\n"
+      "Saved file: F:\\antigravity\\klypto assignment\\data/processed/nifty_merged_5min.csv\n"
      ]
     }
    ],
