--- a/notebooks/05_regime_detection.ipynb
+++ b/notebooks/05_regime_detection.ipynb
@@ -12,7 +12,13 @@
     "# Add project root to path\n",
     "PROJECT_ROOT = os.path.abspath(os.path.join(\"..\"))\n",
     "if PROJECT_ROOT not in sys.path:\n",
-    "    sys.path.insert(0, PROJECT_ROOT)\n"
+    "    sys.path.insert(0, PROJECT_ROOT)\n",
+    "\n",
+    "PLOTS_DIR = \"../plots\"\n",
+    "RESULTS_DIR = \"../results\"\n",
+    "\n",
+    "os.makedirs(PLOTS_DIR, exist_ok=True)\n",
+    "os.makedirs(RESULTS_DIR, exist_ok=True)"
    ]
   },
   {
@@ -60,7 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 126 rows from F:\\antigravity\\klypto assignment\\nifty-quant-research\\data/processed/nifty_features_5min.csv\n"
+      "Loaded 126 rows from F:\\antigravity\\klypto assignment\\data/processed/nifty_features_5min.csv\n"
      ]
     }
    ],
@@ -120,38 +126,13 @@
    "outputs": [],
    "source": [
     "if not valid_feats:\n",
-    "    raise RuntimeError(\"No valid features available for regime detection\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: No features for regime. Using returns.\n"
-     ]
-    }
-   ],
-   "source": [
-    "    print('Warning: No features for regime. Using returns.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    print('Warning: No features for regime. Using returns.')\n",
     "    valid_feats = ['returns']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,16 +159,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Model is not converging.  Current: 164.21131394599396 is not greater than 220.32713972778114. Delta is -56.11582578178718\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2    29\n",
+       "0     1\n",
+       "1     1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model.fit(X[:int(0.7*len(X))])"
+    "model.fit(X[:int(0.7*len(X))])\n",
+    "regimes = model.predict(X)\n",
+    "import pandas as pd; pd.Series(regimes).value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -227,6 +231,27 @@
    ],
    "source": [
     "print('Saved regime model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot Regime Distribution\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "regimes = model.predict(X)\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.hist(regimes, bins=3, alpha=0.7, rwidth=0.8)\n",
+    "plt.title('Regime Distribution')\n",
+    "plt.xlabel('Regime State')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.xticks([0, 1, 2])\n",
+    "plt.grid(axis='y', alpha=0.5)\n",
+    "plt.savefig(f\"{PLOTS_DIR}/regime_distribution.png\")\n",
+    "plt.close()"
    ]
   }
  ],
