--- a/notebooks/06_strategy_backtest.ipynb
+++ b/notebooks/06_strategy_backtest.ipynb
@@ -12,7 +12,13 @@
     "# Add project root to path\n",
     "PROJECT_ROOT = os.path.abspath(os.path.join(\"..\"))\n",
     "if PROJECT_ROOT not in sys.path:\n",
-    "    sys.path.insert(0, PROJECT_ROOT)\n"
+    "    sys.path.insert(0, PROJECT_ROOT)\n",
+    "\n",
+    "PLOTS_DIR = \"../plots\"\n",
+    "RESULTS_DIR = \"../results\"\n",
+    "\n",
+    "os.makedirs(PLOTS_DIR, exist_ok=True)\n",
+    "os.makedirs(RESULTS_DIR, exist_ok=True)"
    ]
   },
   {
@@ -69,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 126 rows from F:\\antigravity\\klypto assignment\\nifty-quant-research\\data/processed/nifty_features_5min.csv\n"
+      "Loaded 126 rows from F:\\antigravity\\klypto assignment\\data/processed/nifty_features_5min.csv\n"
      ]
     }
    ],
@@ -83,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = joblib.load('../models/regime_hmm.joblib')"
+    "# Predict Regime"
    ]
   },
   {
@@ -92,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Predict Regime"
+    "df = df.dropna()"
    ]
   },
   {
@@ -101,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.dropna()"
+    "feats = ['avg_iv', 'iv_spread', 'ema_5']"
    ]
   },
   {
@@ -110,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feats = ['avg_iv', 'iv_spread', 'ema_5']"
+    "valid_feats = [f for f in feats if f in df.columns]"
    ]
   },
   {
@@ -119,21 +125,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "valid_feats = [f for f in feats if f in df.columns]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "if not valid_feats: valid_feats = ['returns']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,16 +251,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "metrics = calculate_metrics(res)"
+    "metrics = calculate_metrics(res)\n",
+    "pd.DataFrame([metrics]).to_csv(f\"{RESULTS_DIR}/strategy_metrics.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -276,6 +274,35 @@
    ],
    "source": [
     "print(metrics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot Equity Curve\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Check if 'cumulative_returns' is directly in res, or if we need to calculate it\n",
+    "# generate_signals returns dataframe with 'returns' and 'strategy_returns' usually.\n",
+    "# Let's assume we need to calculate cumulative returns if not present.\n",
+    "if 'strategy_returns' in res.columns:\n",
+    "    res['cumulative_returns'] = (1 + res['strategy_returns']).cumprod()\n",
+    "elif 'returns' in res.columns: # Fallback\n",
+    "    res['cumulative_returns'] = (1 + res['returns']).cumprod()\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "if 'cumulative_returns' in res.columns:\n",
+    "    plt.plot(res['cumulative_returns'], label='Equity Curve')\n",
+    "    plt.title('Strategy Equity Curve')\n",
+    "    plt.xlabel('Time')\n",
+    "    plt.ylabel('Cumulative Returns')\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    plt.savefig(f\"{PLOTS_DIR}/equity_curve.png\")\n",
+    "    plt.close()"
    ]
   }
  ],
