--- a/notebooks/08_outlier_analysis.ipynb
+++ b/notebooks/08_outlier_analysis.ipynb
@@ -12,7 +12,13 @@
     "# Add project root to path\n",
     "PROJECT_ROOT = os.path.abspath(os.path.join(\"..\"))\n",
     "if PROJECT_ROOT not in sys.path:\n",
-    "    sys.path.insert(0, PROJECT_ROOT)\n"
+    "    sys.path.insert(0, PROJECT_ROOT)\n",
+    "\n",
+    "PLOTS_DIR = \"../plots\"\n",
+    "RESULTS_DIR = \"../results\"\n",
+    "\n",
+    "os.makedirs(PLOTS_DIR, exist_ok=True)\n",
+    "os.makedirs(RESULTS_DIR, exist_ok=True)"
    ]
   },
   {
@@ -42,7 +48,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 126 rows from F:\\antigravity\\klypto assignment\\nifty-quant-research\\data/processed/nifty_features_5min.csv\n"
+      "Loaded 126 rows from F:\\antigravity\\klypto assignment\\data/processed/nifty_features_5min.csv\n"
      ]
     }
    ],
@@ -65,6 +71,24 @@
    ],
    "source": [
     "print('Outlier Analysis Placeholder')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot Outlier Analysis\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "if 'returns' in df.columns:\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.boxplot(df['returns'].dropna())\n",
+    "    plt.title('Returns Outlier Analysis')\n",
+    "    plt.ylabel('Returns')\n",
+    "    plt.savefig(f\"{PLOTS_DIR}/outlier_analysis.png\")\n",
+    "    plt.close()"
    ]
   }
  ],
