--- a/notebooks/02_data_cleaning.ipynb
+++ b/notebooks/02_data_cleaning.ipynb
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 126 rows from F:\\antigravity\\klypto assignment\\nifty-quant-research\\data/raw/nifty_spot_5min.csv\n"
+      "Loaded 126 rows from F:\\antigravity\\klypto assignment\\data/raw/nifty_spot_5min.csv\n"
      ]
     }
    ],
@@ -77,7 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 5040 rows from F:\\antigravity\\klypto assignment\\nifty-quant-research\\data/raw/nifty_futures_raw.csv\n"
+      "Loaded 5040 rows from F:\\antigravity\\klypto assignment\\data/raw/nifty_futures_raw.csv\n"
      ]
     }
    ],
@@ -94,7 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 269426 rows from F:\\antigravity\\klypto assignment\\nifty-quant-research\\data/raw/nifty_options_raw.csv\n"
+      "Loaded 269426 rows from F:\\antigravity\\klypto assignment\\data/raw/nifty_options_raw.csv\n"
      ]
     }
    ],
@@ -180,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved file: F:\\antigravity\\klypto assignment\\nifty-quant-research\\data/processed/nifty_spot_clean.csv\n"
+      "Saved file: F:\\antigravity\\klypto assignment\\data/processed/nifty_spot_clean.csv\n"
      ]
     }
    ],
@@ -197,7 +197,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved file: F:\\antigravity\\klypto assignment\\nifty-quant-research\\data/processed/nifty_futures_clean.csv\n"
+      "Saved file: F:\\antigravity\\klypto assignment\\data/processed/nifty_futures_clean.csv\n"
      ]
     }
    ],
@@ -214,7 +214,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved file: F:\\antigravity\\klypto assignment\\nifty-quant-research\\data/processed/nifty_options_clean.csv\n"
+      "Saved file: F:\\antigravity\\klypto assignment\\data/processed/nifty_options_clean.csv\n"
      ]
     }
    ],
