--- a/notebooks/04_feature_engineering.ipynb
+++ b/notebooks/04_feature_engineering.ipynb
@@ -12,7 +12,13 @@
     "# Add project root to path\n",
     "PROJECT_ROOT = os.path.abspath(os.path.join(\"..\"))\n",
     "if PROJECT_ROOT not in sys.path:\n",
-    "    sys.path.insert(0, PROJECT_ROOT)\n"
+    "    sys.path.insert(0, PROJECT_ROOT)\n",
+    "\n",
+    "PLOTS_DIR = \"../plots\"\n",
+    "RESULTS_DIR = \"../results\"\n",
+    "\n",
+    "os.makedirs(PLOTS_DIR, exist_ok=True)\n",
+    "os.makedirs(RESULTS_DIR, exist_ok=True)"
    ]
   },
   {
@@ -60,7 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 126 rows from F:\\antigravity\\klypto assignment\\nifty-quant-research\\data/processed/nifty_merged_5min.csv\n"
+      "Loaded 126 rows from F:\\antigravity\\klypto assignment\\data/processed/nifty_merged_5min.csv\n"
      ]
     }
    ],
@@ -148,12 +154,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved file: F:\\antigravity\\klypto assignment\\nifty-quant-research\\data/processed/nifty_features_5min.csv\n"
+      "Saved file: F:\\antigravity\\klypto assignment\\data/processed/nifty_features_5min.csv\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>returns</th>\n",
+       "      <th>avg_iv</th>\n",
+       "      <th>iv_spread</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.004525</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.000645</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.003990</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.005697</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    returns  avg_iv  iv_spread\n",
+       "0       NaN     0.2        0.0\n",
+       "1  0.004525     0.2        0.0\n",
+       "2  0.000645     0.2        0.0\n",
+       "3 -0.003990     0.2        0.0\n",
+       "4 -0.005697     0.2        0.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "save_csv(df, 'data/processed/nifty_features_5min.csv')"
+    "save_csv(df, 'data/processed/nifty_features_5min.csv')\n",
+    "df[['returns', 'avg_iv', 'iv_spread']].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot Feature Distribution\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "feats = ['returns', 'avg_iv', 'iv_spread']\n",
+    "valid_feats = [f for f in feats if f in df.columns]\n",
+    "\n",
+    "if valid_feats:\n",
+    "    df[valid_feats].hist(bins=30, figsize=(10, 6))\n",
+    "    plt.suptitle('Feature Distributions')\n",
+    "    plt.savefig(f\"{PLOTS_DIR}/feature_distribution.png\")\n",
+    "    plt.close()"
    ]
   }
  ],
